--- a/index.html
+++ b/index.html
@@ -7,70 +7,76 @@
         Welcome
     </div>
     <br>
-    <fieldset>
-        <legend>Fill your form</legend>
-        <label for="one"> Name:<span class="req">*</span></label>
-        <input id="one" type="text" placeholder="Enter your name"/>
-        <br>
-        <br>
-        <label for="two"> Number:<span class="req">*</span></label>
-        <input id="two" type="tel" placeholder="Enter your no"/>
-        <br>
-        <br>
-        <label>Gender--><span class="req">*</span></label>
-        <br>
-        <br>
-        <label id="three"> Female: </label>
-        <input id="three"  name="one" type="radio" />
-        <label id="four"> Male: </label>
-        <input id="four" name="one" type="radio" />
-        <br>
-        <br>
-        <label id="five"> DOB: <span class="req">*</span></label>
-        <input id="five" type="date" placeholder="Enter dob"/>
-        <br>
-        <br>
-        <label id="six"> Attach ID Proof: <span class="req">*</span></label>
-        <input id="six" type="file" placeholder="Enter your no"/>
-        <br>
-        <br>
-        <label id="seven"> Color: <span class="req">*</span></label>
-        <input id="seven" type="color" placeholder="Enter your no"/>
-        <br>
-        <br>
-        <label id="eight" > Age: <span class="req">*</span></label>
-        <input id="eight" type="number" min="0" max="100"/>
-        <br>
-        <br>
-        <label>City: </label>
-        <select>
-            <option>Bhopal</option>
-            <option>Indore</option>
-            <option>Ujjain</option>
-            <option>Pune</option>
-            <option>Mumbai</option>
-            <option>Banglore</option>
-            <option>Jabalpur</option>
-            <option>Goa</option>
-            <option>Delhi</option>
-        </select>
-        <br>
-        <br>
-        <label id="nine">Enter your email: <span class="req">*</span></label>
-        <input id="nine" type="email"/>
-        <br>
-        <br>
-        <label id="ten">Enter your password: <span class="req">*</span></label>
-        <input id="ten" type="password"/>
-        <br>
-        <br>
-        <label id="eleven">Accept terms and conditions: <span class="req">*</span></label>
-        <input id="eleven" type="checkbox"/>
-        <br>
-        <br>
-        <label id="twelve">Check and submit: </label>
-        <input id="twelve" type="submit"/>
-        <p><span class="req">*</span> - (Required field )</p>
-    </fieldset>
+    <form>
+        <fieldset>
+            <legend>Fill your form</legend>
+            <label for="one"> Name:<span class="req">*</span></label>
+            <input id="one" type="text" required placeholder="Enter your name"/>
+            <br>
+            <br>
+            <label for="two"> Number:<span class="req">*</span></label>
+            <input id="two" type="tel" required placeholder="Enter your no"/>
+            <br>
+            <br>
+            <label>Gender--><span class="req">*</span></label>
+            <br>
+            <br>
+            <label for="three"> Female: </label>
+            <input id="three"  name="one" type="radio" required/>
+            <label for="four"> Male: </label>
+            <input id="four" name="one" type="radio" required/>
+            <br>
+            <br>
+            <label for="five"> DOB: <span class="req">*</span></label>
+            <input id="five" type="date" required placeholder="Enter dob"/>
+            <br>
+            <br>
+            <label for="six"> Attach ID Proof: <span class="req">*</span></label>
+            <input id="six" type="file" required placeholder="Enter your no"/>
+            <br>
+            <br>
+            <label for="seven"> Color: </label>
+            <input id="seven" type="color" />
+            <br>
+            <br>
+            <label for="eight" > Age: <span class="req">*</span></label>
+            <input id="eight" type="number" min="0" max="100" required/>
+            <br>
+            <br>
+            <label>City: </label>
+            <select>
+                <option>Bhopal</option>
+                <option>Indore</option>
+                <option>Ujjain</option>
+                <option>Pune</option>
+                <option>Mumbai</option>
+                <option>Banglore</option>
+                <option>Jabalpur</option>
+                <option>Goa</option>
+                <option>Delhi</option>
+            </select>
+            <br>
+            <br>
+            <label for="nine">Enter your email: <span class="req">*</span></label>
+            <input id="nine" type="email" required/>
+            <br>
+            <br>
+            <label for="ten">Enter your password: <span class="req">*</span></label>
+            <input id="ten" type="password" required/>
+            <br>
+            <br>
+            <label for="eleven">Accept terms and conditions: <span class="req">*</span></label>
+            <input id="eleven" type="checkbox" required/>
+            <br>
+            <br>
+            <label for="twelve">Suggestions: </label>
+            <input id="twelve" type="text" />
+            <br>
+            <br>
+            <input type="submit" value="check and submit"/>
+            <p><span class="req">*</span> - (Required field )</p>
+        </fieldset>
+    </form>
+    
 </body>
 </html>
